--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "wordlist-english": "^1.2.1"
   }
 }
