--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
       "target": "es6",
       "rootDir": "./",
       "outDir": "out",
-      "esModuleInterop": true
+      "esModuleInterop": true,
+      "resolveJsonModule": true,
     }
 }
 
